lib/ElfScript_v0dot3/console/torquescript/CMDgram.output
Nonterminals useless in grammar

    expr_list_decl


Terminals unused in grammar

    rwENDDEF
    rwGLOBAL
    rwNIL
    rwENDIF
    rwENDWHILE
    rwENDFOR
    ILLEGAL_TOKEN
    CHRCONST
    opCAT


Rules useless in grammar

  176 expr_list_decl: ε
  177               | expr_list


State 250 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: decl_list

    2 decl_list: ε
    3          | decl_list decl

    4 decl: stmt
    5     | fn_decl_stmt
    6     | package_decl

    7 package_decl: rwPACKAGE IDENT '{' fn_decl_list '}' ';'

    8 fn_decl_list: fn_decl_stmt
    9             | fn_decl_list fn_decl_stmt

   10 statement_list: ε
   11               | statement_list stmt

   12 stmt: if_stmt
   13     | while_stmt
   14     | for_stmt
   15     | foreach_stmt
   16     | datablock_decl
   17     | switch_stmt
   18     | rwBREAK ';'
   19     | rwCONTINUE ';'
   20     | rwRETURN ';'
   21     | rwRETURN expr ';'
   22     | rwRETURN '{' expr_list '}' ';'
   23     | expression_stmt ';'
   24     | TTAG '=' expr ';'
   25     | TTAG '=' expr ',' expr ';'
   26     | DOCBLOCK

   27 fn_decl_stmt: rwDEFINE IDENT '(' var_list_decl ')' '{' statement_list '}'
   28             | rwDEFINE IDENT opCOLONCOLON IDENT '(' var_list_decl ')' '{' statement_list '}'

   29 var_list_decl: ε
   30              | var_list

   31 var_list: param
   32         | var_list ',' param

   33 param: VAR
   34      | VAR '?'
   35      | VAR '=' expr
   36      | VAR '?' '=' expr

   37 datablock_decl: rwDATABLOCK class_name_expr '(' expr parent_block ')' '{' slot_assign_list_opt '}' ';'

   38 object_decl: rwDECLARE class_name_expr '(' object_name parent_block object_args ')' '{' object_declare_block '}'
   39            | rwDECLARE class_name_expr '(' object_name parent_block object_args ')'
   40            | rwDECLARE class_name_expr '(' '[' object_name ']' parent_block object_args ')' '{' object_declare_block '}'
   41            | rwDECLARE class_name_expr '(' '[' object_name ']' parent_block object_args ')'
   42            | rwDECLARESINGLETON class_name_expr '(' object_name parent_block object_args ')' '{' object_declare_block '}'
   43            | rwDECLARESINGLETON class_name_expr '(' object_name parent_block object_args ')'

   44 parent_block: ε
   45             | ':' IDENT

   46 object_name: ε
   47            | expr

   48 object_args: ε
   49            | ',' expr_list

   50 object_declare_block: ε
   51                     | slot_assign_list
   52                     | object_decl_list
   53                     | slot_assign_list object_decl_list

   54 object_decl_list: object_decl ';'
   55                 | object_decl_list object_decl ';'

   56 stmt_block: '{' statement_list '}'
   57           | stmt

   58 switch_stmt: rwSWITCH '(' expr ')' '{' case_block '}'
   59            | rwSWITCHSTR '(' expr ')' '{' case_block '}'

   60 case_block: rwCASE case_expr ':' statement_list
   61           | rwCASE case_expr ':' statement_list rwDEFAULT ':' statement_list
   62           | rwCASE case_expr ':' statement_list case_block

   63 case_expr: expr
   64          | case_expr rwCASEOR expr

   65 if_stmt: rwIF '(' expr ')' stmt_block
   66        | rwIF '(' expr ')' stmt_block rwELSE stmt_block

   67 while_stmt: rwWHILE '(' expr ')' stmt_block
   68           | rwDO stmt_block rwWHILE '(' expr ')'

   69 for_stmt: rwFOR '(' expr ';' expr ';' expr ')' stmt_block
   70         | rwFOR '(' expr ';' expr ';' ')' stmt_block
   71         | rwFOR '(' expr ';' ';' expr ')' stmt_block
   72         | rwFOR '(' expr ';' ';' ')' stmt_block
   73         | rwFOR '(' ';' expr ';' expr ')' stmt_block
   74         | rwFOR '(' ';' expr ';' ')' stmt_block
   75         | rwFOR '(' ';' ';' expr ')' stmt_block
   76         | rwFOR '(' ';' ';' ')' stmt_block

   77 foreach_stmt: rwFOREACH '(' VAR rwIN expr ')' stmt_block
   78             | rwFOREACHSTR '(' VAR rwIN expr ')' stmt_block

   79 expression_stmt: stmt_expr

   80 expr: stmt_expr
   81     | '(' expr ')'
   82     | expr '^' expr
   83     | expr '%' expr
   84     | expr '&' expr
   85     | expr '|' expr
   86     | expr '+' expr
   87     | expr '-' expr
   88     | expr '*' expr
   89     | expr '/' expr
   90     | '-' expr
   91     | '*' expr
   92     | TTAG
   93     | expr '?' expr ':' expr
   94     | expr '<' expr
   95     | expr '>' expr
   96     | expr opGE expr
   97     | expr opLE expr
   98     | expr opEQ expr
   99     | expr opNE expr
  100     | expr opOR expr
  101     | expr opSHL expr
  102     | expr opSHR expr
  103     | expr opAND expr
  104     | expr opSTREQ expr
  105     | expr opSTRNE expr
  106     | expr '@' expr
  107     | '!' expr
  108     | '~' expr
  109     | TAGATOM
  110     | FLTCONST
  111     | INTCONST
  112     | rwBREAK
  113     | slot_acc
  114     | intslot_acc
  115     | IDENT
  116     | STRATOM
  117     | VAR
  118     | VAR '[' aidx_expr ']'

  119 slot_acc: expr '.' IDENT
  120         | expr '.' IDENT '[' aidx_expr ']'

  121 intslot_acc: expr opINTNAME class_name_expr
  122            | expr opINTNAMER class_name_expr

  123 class_name_expr: IDENT
  124                | '(' expr ')'

  125 assign_op_struct: opPLUSPLUS
  126                 | opMINUSMINUS
  127                 | opPLASN expr
  128                 | opMIASN expr
  129                 | opMLASN expr
  130                 | opDVASN expr
  131                 | opMODASN expr
  132                 | opANDASN expr
  133                 | opXORASN expr
  134                 | opORASN expr
  135                 | opSLASN expr
  136                 | opSRASN expr

  137 stmt_expr: funcall_expr
  138          | assert_expr
  139          | object_decl
  140          | VAR '=' expr
  141          | VAR '=' '{' expr_list '}'
  142          | VAR '[' aidx_expr ']' '=' expr
  143          | VAR '[' aidx_expr ']' '=' '{' expr_list '}'
  144          | VAR assign_op_struct
  145          | VAR '[' aidx_expr ']' assign_op_struct
  146          | slot_acc assign_op_struct
  147          | slot_acc '=' expr
  148          | slot_acc '=' '{' expr_list '}'

  149 funcall_expr: IDENT '(' func_arg_list_decl ')'
  150             | IDENT opCOLONCOLON IDENT '(' func_arg_list_decl ')'
  151             | expr '.' IDENT '(' func_arg_list_decl ')'

  152 func_arg_item: expr
  153              | '{' expr_list '}'

  154 func_arg_list: func_arg_item
  155              | func_arg_list ',' func_arg_item

  156 func_arg_list_decl: ε
  157                   | func_arg_list

  158 assert_expr: rwASSERT '(' expr ')'
  159            | rwASSERT '(' expr ',' STRATOM ')'

  160 expr_list: expr
  161          | expr_list ',' expr

  162 slot_assign_list_opt: ε
  163                     | slot_assign_list

  164 slot_assign_list: slot_assign
  165                 | slot_assign_list slot_assign

  166 slot_assign: IDENT '=' expr ';'
  167            | IDENT '=' '{' expr_list '}' ';'
  168            | TYPEIDENT IDENT '=' expr ';'
  169            | TYPEIDENT IDENT '=' '{' expr_list '}' ';'
  170            | rwDATABLOCK '=' expr ';'
  171            | IDENT '[' aidx_expr ']' '=' expr ';'
  172            | IDENT '[' aidx_expr ']' '=' '{' expr_list '}' ';'
  173            | TYPEIDENT IDENT '[' aidx_expr ']' '=' expr ';'

  174 aidx_expr: expr
  175          | aidx_expr ',' expr


Terminals, with rules where they appear

    $end (0) 0
    '!' <i> (33) 107
    '%' <i> (37) 83
    '&' <i> (38) 84
    '(' <i> (40) 27 28 37 38 39 40 41 42 43 58 59 65 66 67 68 69 70 71 72 73 74 75 76 77 78 81 124 149 150 151 158 159
    ')' <i> (41) 27 28 37 38 39 40 41 42 43 58 59 65 66 67 68 69 70 71 72 73 74 75 76 77 78 81 124 149 150 151 158 159
    '*' <i> (42) 88 91
    '+' <i> (43) 86
    ',' <i> (44) 25 32 49 155 159 161 175
    '-' <i> (45) 87 90
    '.' <i> (46) 119 120 151
    '/' <i> (47) 89
    ':' <i> (58) 45 60 61 62 93
    ';' <i> (59) 7 18 19 20 21 22 23 24 25 37 54 55 69 70 71 72 73 74 75 76 166 167 168 169 170 171 172 173
    '<' <i> (60) 94
    '=' <i> (61) 24 25 35 36 140 141 142 143 147 148 166 167 168 169 170 171 172 173
    '>' <i> (62) 95
    '?' (63) 34 36 93
    '@' <i> (64) 106
    '[' (91) 40 41 118 120 142 143 145 171 172 173
    ']' (93) 40 41 118 120 142 143 145 171 172 173
    '^' <i> (94) 82
    '{' <i> (123) 7 22 27 28 37 38 40 42 56 58 59 141 143 148 153 167 169 172
    '|' <i> (124) 85
    '}' <i> (125) 7 22 27 28 37 38 40 42 56 58 59 141 143 148 153 167 169 172
    '~' <i> (126) 108
    error (256)
    rwDEFINE <i> (258) 27 28
    rwENDDEF <i> (259)
    rwDECLARE <i> (260) 38 39 40 41
    rwDECLARESINGLETON <i> (261) 42 43
    rwBREAK <i> (262) 18 112
    rwELSE <i> (263) 66
    rwCONTINUE <i> (264) 19
    rwGLOBAL <i> (265)
    rwIF <i> (266) 65 66
    rwNIL <i> (267)
    rwRETURN <i> (268) 20 21 22
    rwWHILE <i> (269) 67 68
    rwDO <i> (270) 68
    rwENDIF <i> (271)
    rwENDWHILE <i> (272)
    rwENDFOR <i> (273)
    rwDEFAULT <i> (274) 61
    rwFOR <i> (275) 69 70 71 72 73 74 75 76
    rwFOREACH <i> (276) 77
    rwFOREACHSTR <i> (277) 78
    rwIN <i> (278) 77 78
    rwDATABLOCK <i> (279) 37 170
    rwSWITCH <i> (280) 58
    rwCASE <i> (281) 60 61 62
    rwSWITCHSTR <i> (282) 59
    rwCASEOR <i> (283) 64
    rwPACKAGE <i> (284) 7
    rwASSERT <i> (285) 158 159
    ILLEGAL_TOKEN (286)
    CHRCONST <c> (287)
    INTCONST <i> (288) 111
    TTAG <s> (289) 24 25 92
    VAR <s> (290) 33 34 35 36 77 78 117 118 140 141 142 143 144 145
    IDENT <s> (291) 7 27 28 45 115 119 120 123 149 150 151 166 167 168 169 171 172 173
    TYPEIDENT <i> (292) 168 169 173
    DOCBLOCK <str> (293) 26
    STRATOM <str> (294) 116 159
    TAGATOM <str> (295) 109
    FLTCONST <f> (296) 110
    opINTNAME <i> (297) 121
    opINTNAMER <i> (298) 122
    opMINUSMINUS <i> (299) 126
    opPLUSPLUS <i> (300) 125
    opSHL <i> (301) 101
    opSHR <i> (302) 102
    opPLASN <i> (303) 127
    opMIASN <i> (304) 128
    opMLASN <i> (305) 129
    opDVASN <i> (306) 130
    opMODASN <i> (307) 131
    opANDASN <i> (308) 132
    opXORASN <i> (309) 133
    opORASN <i> (310) 134
    opSLASN <i> (311) 135
    opSRASN <i> (312) 136
    opCAT <i> (313)
    opEQ <i> (314) 98
    opNE <i> (315) 99
    opGE <i> (316) 96
    opLE <i> (317) 97
    opAND <i> (318) 103
    opOR <i> (319) 100
    opSTREQ <i> (320) 104
    opSTRNE <i> (321) 105
    opCOLONCOLON <i> (322) 28 150
    UNARY (323)


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    start (95)
        on left: 1
        on right: 0
    decl_list <stmt> (96)
        on left: 2 3
        on right: 1 3
    decl <stmt> (97)
        on left: 4 5 6
        on right: 3
    package_decl <stmt> (98)
        on left: 7
        on right: 6
    fn_decl_list <stmt> (99)
        on left: 8 9
        on right: 7 9
    statement_list <stmt> (100)
        on left: 10 11
        on right: 11 27 28 56 60 61 62
    stmt <stmt> (101)
        on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26
        on right: 4 11 57
    fn_decl_stmt <stmt> (102)
        on left: 27 28
        on right: 5 8 9
    var_list_decl <var> (103)
        on left: 29 30
        on right: 27 28
    var_list <var> (104)
        on left: 31 32
        on right: 30 32
    param <var> (105)
        on left: 33 34 35 36
        on right: 31 32
    datablock_decl <stmt> (106)
        on left: 37
        on right: 16
    object_decl <od> (107)
        on left: 38 39 40 41 42 43
        on right: 54 55 139
    parent_block <s> (108)
        on left: 44 45
        on right: 37 38 39 40 41 42 43
    object_name <expr> (109)
        on left: 46 47
        on right: 38 39 40 41 42 43
    object_args <expr> (110)
        on left: 48 49
        on right: 38 39 40 41 42 43
    object_declare_block <odcl> (111)
        on left: 50 51 52 53
        on right: 38 40 42
    object_decl_list <od> (112)
        on left: 54 55
        on right: 52 53 55
    stmt_block <stmt> (113)
        on left: 56 57
        on right: 65 66 67 68 69 70 71 72 73 74 75 76 77 78
    switch_stmt <stmt> (114)
        on left: 58 59
        on right: 17
    case_block <ifnode> (115)
        on left: 60 61 62
        on right: 58 59 62
    case_expr <expr> (116)
        on left: 63 64
        on right: 60 61 62 64
    if_stmt <stmt> (117)
        on left: 65 66
        on right: 12
    while_stmt <stmt> (118)
        on left: 67 68
        on right: 13
    for_stmt <stmt> (119)
        on left: 69 70 71 72 73 74 75 76
        on right: 14
    foreach_stmt <stmt> (120)
        on left: 77 78
        on right: 15
    expression_stmt <stmt> (121)
        on left: 79
        on right: 23
    expr <expr> (122)
        on left: 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118
        on right: 21 24 25 35 36 37 47 58 59 63 64 65 66 67 68 69 70 71 72 73 74 75 77 78 81 82 83 84 85 86 87 88 89 90 91 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 119 120 121 122 124 127 128 129 130 131 132 133 134 135 136 140 142 147 151 152 158 159 160 161 166 168 170 171 173 174 175
    slot_acc <slot> (123)
        on left: 119 120
        on right: 113 146 147 148
    intslot_acc <intslot> (124)
        on left: 121 122
        on right: 114
    class_name_expr <expr> (125)
        on left: 123 124
        on right: 37 38 39 40 41 42 43 121 122
    assign_op_struct <asn> (126)
        on left: 125 126 127 128 129 130 131 132 133 134 135 136
        on right: 144 145 146
    stmt_expr <expr> (127)
        on left: 137 138 139 140 141 142 143 144 145 146 147 148
        on right: 79 80
    funcall_expr <expr> (128)
        on left: 149 150 151
        on right: 137
    func_arg_item <expr> (129)
        on left: 152 153
        on right: 154 155
    func_arg_list <expr> (130)
        on left: 154 155
        on right: 155 157
    func_arg_list_decl <expr> (131)
        on left: 156 157
        on right: 149 150 151
    assert_expr <expr> (132)
        on left: 158 159
        on right: 138
    expr_list <expr> (133)
        on left: 160 161
        on right: 22 49 141 143 148 153 161 167 169 172
    slot_assign_list_opt <slist> (134)
        on left: 162 163
        on right: 37
    slot_assign_list <slist> (135)
        on left: 164 165
        on right: 51 53 163 165
    slot_assign <slist> (136)
        on left: 166 167 168 169 170 171 172 173
        on right: 164 165
    aidx_expr <expr> (137)
        on left: 174 175
        on right: 118 120 142 143 145 171 172 173 175


State 0

    0 $accept: • start $end

    $default  reduce using rule 2 (decl_list)

    start      go to state 1
    decl_list  go to state 2


State 1

    0 $accept: start • $end

    $end  shift, and go to state 3


State 2

    1 start: decl_list •
    3 decl_list: decl_list • decl

    rwDEFINE            shift, and go to state 4
    rwDECLARE           shift, and go to state 5
    rwDECLARESINGLETON  shift, and go to state 6
    rwBREAK             shift, and go to state 7
    rwCONTINUE          shift, and go to state 8
    rwIF                shift, and go to state 9
    rwRETURN            shift, and go to state 10
    rwWHILE             shift, and go to state 11
    rwDO                shift, and go to state 12
    rwFOR               shift, and go to state 13
    rwFOREACH           shift, and go to state 14
    rwFOREACHSTR        shift, and go to state 15
    rwDATABLOCK         shift, and go to state 16
    rwSWITCH            shift, and go to state 17
    rwSWITCHSTR         shift, and go to state 18
    rwPACKAGE           shift, and go to state 19
    rwASSERT            shift, and go to state 20
    INTCONST            shift, and go to state 21
    TTAG                shift, and go to state 22
    VAR                 shift, and go to state 23
    IDENT               shift, and go to state 24
    DOCBLOCK            shift, and go to state 25
    STRATOM             shift, and go to state 26
    TAGATOM             shift, and go to state 27
    FLTCONST            shift, and go to state 28
    '-'                 shift, and go to state 29
    '*'                 shift, and go to state 30
    '('                 shift, and go to state 31
    '~'                 shift, and go to state 32
    '!'                 shift, and go to state 33

    $default  reduce using rule 1 (start)

    decl             go to state 34
    package_decl     go to state 35
    stmt             go to state 36
    fn_decl_stmt     go to state 37
    datablock_decl   go to state 38
    object_decl      go to state 39
    switch_stmt      go to state 40
    if_stmt          go to state 41
    while_stmt       go to state 42
    for_stmt         go to state 43
    foreach_stmt     go to state 44
    expression_stmt  go to state 45
    expr             go to state 46
    slot_acc         go to state 47
    intslot_acc      go to state 48
    stmt_expr        go to state 49
    funcall_expr     go to state 50
    assert_expr      go to state 51


State 3

    0 $accept: start $end •

    $default  accept


State 4

   27 fn_decl_stmt: rwDEFINE • IDENT '(' var_list_decl ')' '{' statement_list '}'
   28             | rwDEFINE • IDENT opCOLONCOLON IDENT '(' var_list_decl ')' '{' statement_list '}'

    IDENT  shift, and go to state 52


State 5

   38 object_decl: rwDECLARE • class_name_expr '(' object_name parent_block object_args ')' '{' object_declare_block '}'
   39            | rwDECLARE • class_name_expr '(' object_name parent_block object_args ')'
   40            | rwDECLARE • class_name_expr '(' '[' object_name ']' parent_block object_args ')' '{' object_declare_block '}'
   41            | rwDECLARE • class_name_expr '(' '[' object_name ']' parent_block object_args ')'

    IDENT  shift, and go to state 53
    '('    shift, and go to state 54

    class_name_expr  go to state 55


State 6

   42 object_decl: rwDECLARESINGLETON • class_name_expr '(' object_name parent_block object_args ')' '{' object_declare_block '}'
   43            | rwDECLARESINGLETON • class_name_expr '(' object_name parent_block object_args ')'

    IDENT  shift, and go to state 53
    '('    shift, and go to state 54

    class_name_expr  go to state 56


State 7

   18 stmt: rwBREAK • ';'
  112 expr: rwBREAK •

    ';'  shift, and go to state 57

    $default  reduce using rule 112 (expr)


State 8

   19 stmt: rwCONTINUE • ';'

    ';'  shift, and go to state 58


State 9

   65 if_stmt: rwIF • '(' expr ')' stmt_block
   66        | rwIF • '(' expr ')' stmt_block rwELSE stmt_block

    '('  shift, and go to state 59


State 10

   20 stmt: rwRETURN • ';'
   21     | rwRETURN • expr ';'
   22     | rwRETURN • '{' expr_list '}' ';'

    rwDECLARE           shift, and go to state 5
    rwDECLARESINGLETON  shift, and go to state 6
    rwBREAK             shift, and go to state 60
    rwASSERT            shift, and go to state 20
    INTCONST            shift, and go to state 21
    TTAG                shift, and go to state 61
    VAR                 shift, and go to state 23
    IDENT               shift, and go to state 24
    STRATOM             shift, and go to state 26
    TAGATOM             shift, and go to state 27
    FLTCONST            shift, and go to state 28
    '-'                 shift, and go to state 29
    '*'                 shift, and go to state 30
    '('                 shift, and go to state 31
    ';'                 shift, and go to state 62
    '{'                 shift, and go to state 63
    '~'                 shift, and go to state 32
    '!'                 shift, and go to state 33

    object_decl   go to state 39
    expr          go to state 64
    slot_acc      go to state 47
    intslot_acc   go to state 48
    stmt_expr     go to state 65
    funcall_expr  go to state 50
    assert_expr   go to state 51


State 11

   67 while_stmt: rwWHILE • '(' expr ')' stmt_block

    '('  shift, and go to state 66


State 12

   68 while_stmt: rwDO • stmt_block rwWHILE '(' expr ')'

    rwDECLARE           shift, and go to state 5
    rwDECLARESINGLETON  shift, and go to state 6
    rwBREAK             shift, and go to state 7
    rwCONTINUE          shift, and go to state 8
    rwIF                shift, and go to state 9
    rwRETURN            shift, and go to state 10
    rwWHILE             shift, and go to state 11
    rwDO                shift, and go to state 12
    rwFOR               shift, and go to state 13
    rwFOREACH           shift, and go to state 14
    rwFOREACHSTR        shift, and go to state 15
    rwDATABLOCK         shift, and go to state 16
    rwSWITCH            shift, and go to state 17
    rwSWITCHSTR         shift, and go to state 18
    rwASSERT            shift, and go to state 20
    INTCONST            shift, and go to state 21
    TTAG                shift, and go to state 22
    VAR                 shift, and go to state 23
    IDENT               shift, and go to state 24
    DOCBLOCK            shift, and go to state 25
    STRATOM             shift, and go to state 26
    TAGATOM             shift, and go to state 27
    FLTCONST            shift, and go to state 28
    '-'                 shift, and go to state 29
    '*'                 shift, and go to state 30
    '('                 shift, and go to state 31
    '{'                 shift, and go to state 67
    '~'                 shift, and go to state 32
    '!'                 shift, and go to state 33

    stmt             go to state 68
    datablock_decl   go to state 38
    object_decl      go to state 39
    stmt_block       go to state 69
    switch_stmt      go to state 40
    if_stmt          go to state 41
    while_stmt       go to state 42
    for_stmt         go to state 43
    foreach_stmt     go to state 44
    expression_stmt  go to state 45
    expr             go to state 46
    slot_acc         go to state 47
    intslot_acc      go to state 48
    stmt_expr        go to state 49
    funcall_expr     go to state 50
    assert_expr      go to state 51


State 13

   69 for_stmt: rwFOR • '(' expr ';' expr ';' expr ')' stmt_block
   70         | rwFOR • '(' expr ';' expr ';' ')' stmt_block
   71         | rwFOR • '(' expr ';' ';' expr ')' stmt_block
   72         | rwFOR • '(' expr ';' ';' ')' stmt_block
   73         | rwFOR • '(' ';' expr ';' expr ')' stmt_block
   74         | rwFOR • '(' ';' expr ';' ')' stmt_block
   75         | rwFOR • '(' ';' ';' expr ')' stmt_block
   76         | rwFOR • '(' ';' ';' ')' stmt_block

    '('  shift, and go to state 70


State 14

   77 foreach_stmt: rwFOREACH • '(' VAR rwIN expr ')' stmt_block

    '('  shift, and go to state 71


State 15

   78 foreach_stmt: rwFOREACHSTR • '(' VAR rwIN expr ')' stmt_block

    '('  shift, and go to state 72


State 16

   37 datablock_decl: rwDATABLOCK • class_name_expr '(' expr parent_block ')' '{' slot_assign_list_opt '}' ';'

    IDENT  shift, and go to state 53
    '('    shift, and go to state 54

    class_name_expr  go to state 73


State 17

   58 switch_stmt: rwSWITCH • '(' expr ')' '{' case_block '}'

    '('  shift, and go to state 74


State 18

   59 switch_stmt: rwSWITCHSTR • '(' expr ')' '{' case_block '}'

    '('  shift, and go to state 75


State 19

    7 package_decl: rwPACKAGE • IDENT '{' fn_decl_list '}' ';'

    IDENT  shift, and go to state 76


State 20

  158 assert_expr: rwASSERT • '(' expr ')'
  159            | rwASSERT • '(' expr ',' STRATOM ')'

    '('  shift, and go to state 77


State 21

  111 expr: INTCONST •

    $default  reduce using rule 111 (expr)


State 22

   24 stmt: TTAG • '=' expr ';'
   25     | TTAG • '=' expr ',' expr ';'
   92 expr: TTAG •

    '='  shift, and go to state 78

    $default  reduce using rule 92 (expr)


State 23

  117 expr: VAR •
  118     | VAR • '[' aidx_expr ']'
  140 stmt_expr: VAR • '=' expr
  141          | VAR • '=' '{' expr_list '}'
  142          | VAR • '[' aidx_expr ']' '=' expr
  143          | VAR • '[' aidx_expr ']' '=' '{' expr_list '}'
  144          | VAR • assign_op_struct
  145          | VAR • '[' aidx_expr ']' assign_op_struct

    '='           shift, and go to state 79
    opMINUSMINUS  shift, and go to state 80
    opPLUSPLUS    shift, and go to state 81
    opPLASN       shift, and go to state 82
    opMIASN       shift, and go to state 83
    opMLASN       shift, and go to state 84
    opDVASN       shift, and go to state 85
    opMODASN      shift, and go to state 86
    opANDASN      shift, and go to state 87
    opXORASN      shift, and go to state 88
    opORASN       shift, and go to state 89
    opSLASN       shift, and go to state 90
    opSRASN       shift, and go to state 91
    '['           shift, and go to state 92

    $default  reduce using rule 117 (expr)

    assign_op_struct  go to state 93


State 24

  115 expr: IDENT •
  149 funcall_expr: IDENT • '(' func_arg_list_decl ')'
  150             | IDENT • opCOLONCOLON IDENT '(' func_arg_list_decl ')'

    '('           shift, and go to state 94
    opCOLONCOLON  shift, and go to state 95

    $default  reduce using rule 115 (expr)


State 25

   26 stmt: DOCBLOCK •

    $default  reduce using rule 26 (stmt)


State 26

  116 expr: STRATOM •

    $default  reduce using rule 116 (expr)


State 27

  109 expr: TAGATOM •

    $default  reduce using rule 109 (expr)


State 28

  110 expr: FLTCONST •

    $default  reduce using rule 110 (expr)


State 29

   90 expr: '-' • expr

    rwDECLARE           shift, and go to state 5
    rwDECLARESINGLETON  shift, and go to state 6
    rwBREAK             shift, and go to state 60
    rwASSERT            shift, and go to state 20
    INTCONST            shift, and go to state 21
    TTAG                shift, and go to state 61
    VAR                 shift, and go to state 23
    IDENT               shift, and go to state 24
    STRATOM             shift, and go to state 26
    TAGATOM             shift, and go to state 27
    FLTCONST            shift, and go to state 28
    '-'                 shift, and go to state 29
    '*'                 shift, and go to state 30
    '('                 shift, and go to state 31
    '~'                 shift, and go to state 32
    '!'                 shift, and go to state 33

    object_decl   go to state 39
    expr          go to state 96
    slot_acc      go to state 47
    intslot_acc   go to state 48
    stmt_expr     go to state 65
    funcall_expr  go to state 50
    assert_expr   go to state 51


State 30

   91 expr: '*' • expr

    rwDECLARE           shift, and go to state 5
    rwDECLARESINGLETON  shift, and go to state 6
    rwBREAK             shift, and go to state 60
    rwASSERT            shift, and go to state 20
    INTCONST            shift, and go to state 21
    TTAG                shift, and go to state 61
    VAR                 shift, and go to state 23
    IDENT               shift, and go to state 24
    STRATOM             shift, and go to state 26
    TAGATOM             shift, and go to state 27
    FLTCONST            shift, and go to state 28
    '-'                 shift, and go to state 29
    '*'                 shift, and go to state 30
    '('                 shift, and go to state 31
    '~'                 shift, and go to state 32
    '!'                 shift, and go to state 33

    object_decl   go to state 39
    expr          go to state 97
    slot_acc      go to state 47
    intslot_acc   go to state 48
    stmt_expr     go to state 65
    funcall_expr  go to state 50
    assert_expr   go to state 51


State 31

   81 expr: '(' • expr ')'

    rwDECLARE           shift, and go to state 5
    rwDECLARESINGLETON  shift, and go to state 6
    rwBREAK             shift, and go to state 60
    rwASSERT            shift, and go to state 20
    INTCONST            shift, and go to state 21
    TTAG                shift, and go to state 61
    VAR                 shift, and go to state 23
    IDENT               shift, and go to state 24
    STRATOM             shift, and go to state 26
    TAGATOM             shift, and go to state 27
    FLTCONST            shift, and go to state 28
    '-'                 shift, and go to state 29
    '*'                 shift, and go to state 30
    '('                 shift, and go to state 31
    '~'                 shift, and go to state 32
    '!'                 shift, and go to state 33

    object_decl   go to state 39
    expr          go to state 98
    slot_acc      go to state 47
    intslot_acc   go to state 48
    stmt_expr     go to state 65
    funcall_expr  go to state 50
    assert_expr   go to state 51


State 32

  108 expr: '~' • expr

    rwDECLARE           shift, and go to state 5
    rwDECLARESINGLETON  shift, and go to state 6
    rwBREAK             shift, and go to state 60
    rwASSERT            shift, and go to state 20
    INTCONST            shift, and go to state 21
    TTAG                shift, and go to state 61
    VAR                 shift, and go to state 23
    IDENT               shift, and go to state 24
    STRATOM             shift, and go to state 26
    TAGATOM             shift, and go to state 27
    FLTCONST            shift, and go to state 28
    '-'                 shift, and go to state 29
    '*'                 shift, and go to state 30
    '('                 shift, and go to state 31
    '~'                 shift, and go to state 32
    '!'                 shift, and go to state 33

    object_decl   go to state 39
    expr          go to state 99
    slot_acc      go to state 47
    intslot_acc   go to state 48
    stmt_expr     go to state 65
    funcall_expr  go to state 50
    assert_expr   go to state 51


State 33

  107 expr: '!' • expr

    rwDECLARE           shift, and go to state 5
    rwDECLARESINGLETON  shift, and go to state 6
    rwBREAK             shift, and go to state 60
    rwASSERT            shift, and go to state 20
    INTCONST            shift, and go to state 21
    TTAG                shift, and go to state 61
    VAR                 shift, and go to state 23
    IDENT               shift, and go to state 24
    STRATOM             shift, and go to state 26
    TAGATOM             shift, and go to state 27
    FLTCONST            shift, and go to state 28
    '-'                 shift, and go to state 29
    '*'                 shift, and go to state 30
    '('                 shift, and go to state 31
    '~'                 shift, and go to state 32
    '!'                 shift, and go to state 33

    object_decl   go to state 39
    expr          go to state 100
    slot_acc      go to state 47
    intslot_acc   go to state 48
    stmt_expr     go to state 65
    funcall_expr  go to state 50
    assert_expr   go to state 51


State 34

    3 decl_list: decl_list decl •

    $default  reduce using rule 3 (decl_list)


State 35

    6 decl: package_decl •

    $default  reduce using rule 6 (decl)


State 36

    4 decl: stmt •

    $default  reduce using rule 4 (decl)


State 37

    5 decl: fn_decl_stmt •

    $default  reduce using rule 5 (decl)


State 38

   16 stmt: datablock_decl •

    $default  reduce using rule 16 (stmt)


State 39

  139 stmt_expr: object_decl •

    $default  reduce using rule 139 (stmt_expr)


State 40

   17 stmt: switch_stmt •

    $default  reduce using rule 17 (stmt)


State 41

   12 stmt: if_stmt •

    $default  reduce using rule 12 (stmt)


State 42

   13 stmt: while_stmt •

    $default  reduce using rule 13 (stmt)


State 43

   14 stmt: for_stmt •

    $default  reduce using rule 14 (stmt)


State 44

   15 stmt: foreach_stmt •

    $default  reduce using rule 15 (stmt)


State 45

   23 stmt: expression_stmt • ';'

    ';'  shift, and go to state 101


State 46

   82 expr: expr • '^' expr
   83     | expr • '%' expr
   84     | expr • '&' expr
   85     | expr • '|' expr
   86     | expr • '+' expr
   87     | expr • '-' expr
   88     | expr • '*' expr
   89     | expr • '/' expr
   93     | expr • '?' expr ':' expr
   94     | expr • '<' expr
   95     | expr • '>' expr
   96     | expr • opGE expr
   97     | expr • opLE expr
   98     | expr • opEQ expr
   99     | expr • opNE expr
  100     | expr • opOR expr
  101     | expr • opSHL expr
  102     | expr • opSHR expr
  103     | expr • opAND expr
  104     | expr • opSTREQ expr
  105     | expr • opSTRNE expr
  106     | expr • '@' expr
  119 slot_acc: expr • '.' IDENT
  120         | expr • '.' IDENT '[' aidx_expr ']'
  121 intslot_acc: expr • opINTNAME class_name_expr
  122            | expr • opINTNAMER class_name_expr
  151 funcall_expr: expr • '.' IDENT '(' func_arg_list_decl ')'

    '+'         shift, and go to state 102
    '-'         shift, and go to state 103
    '*'         shift, and go to state 104
    '/'         shift, and go to state 105
    '<'         shift, and go to state 106
    '>'         shift, and go to state 107
    '.'         shift, and go to state 108
    '|'         shift, and go to state 109
    '&'         shift, and go to state 110
    '%'         shift, and go to state 111
    '^'         shift, and go to state 112
    '@'         shift, and go to state 113
    opINTNAME   shift, and go to state 114
    opINTNAMER  shift, and go to state 115
    opSHL       shift, and go to state 116
    opSHR       shift, and go to state 117
    opEQ        shift, and go to state 118
    opNE        shift, and go to state 119
    opGE        shift, and go to state 120
    opLE        shift, and go to state 121
    opAND       shift, and go to state 122
    opOR        shift, and go to state 123
    opSTREQ     shift, and go to state 124
    opSTRNE     shift, and go to state 125
    '?'         shift, and go to state 126


State 47

  113 expr: slot_acc •
  146 stmt_expr: slot_acc • assign_op_struct
  147          | slot_acc • '=' expr
  148          | slot_acc • '=' '{' expr_list '}'
